--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-DB_CONNECT=mongodb+srv://ethan:mongodb@cluster0-awplv.mongodb.net/dbname?retryWrites=true&w=majority
+DB_CONNECT=mongodb+srv://ethan:mongodb@cluster0-awplv.mongodb.net/karaDB?retryWrites=true&w=majority
 secret=secret
 PORT=4000
